--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta charset="utf-8">
 	<title id="t">/ Click Block /</title>
 	<meta name="msapplication-TileColor" content="#FFFFFF">
-	<link rel="icon" href="icon.png">
+	<link rel="icon" href="img/icon.png">
 	<noscript>
 		<h1 style="text-align: center;">javascriptをオンにしてください！※あやしいわーるどの住民以外は大体オンにしています。</h1>
 	</noscript>
@@ -170,9 +170,9 @@
 		</div>
 	</div>
 	<div id="all">
-		<img src="icon.svg" id="menu-b">
+		<img src="img/icon.svg" id="menu-b">
 		<div id="menu">
-			<img src="icon.svg" id="menu-a">
+			<img src="img/icon.svg" id="menu-a">
 			<p id="menu-t">/ Menu /</p>
 		</div>
 		<div id="left-s"></div>
