--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		body {
 			margin: 0;
 			overflow: hidden;
-			background-color: #81c784;
+			background-color: #a5d6a7;
 		}
 		.start-anime {
 			background-color: #a5d6a7;
@@ -242,6 +242,7 @@
 			}
 		}
 		function start(){
+			$('body').css('background-color','#81c784')
 			$('#start-anime').hide();
 			$('#all').fadeIn(800);
 			$('#t').text("/ おぬどんぬぬっぺ /");
