--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
     							setTimeout(lo,1)
     						}else{
     							$('.start-anime').hide();
+							$('body').css('background-color','#81c784');
     							setTimeout(start,600)
     						}
     					}
@@ -242,7 +243,6 @@
 			}
 		}
 		function start(){
-			$('body').css('background-color','#81c784')
 			$('#start-anime').hide();
 			$('#all').fadeIn(800);
 			$('#t').text("/ おぬどんぬぬっぺ /");
