--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 			top: 0;
 			left: 0;
 		}
-		#menu-t {
+		.menu-t {
 			font-size: 2.8vw;
 			text-align: center;
 			font-family: 'DotGothic16', sans-serif;
@@ -168,7 +168,7 @@
 	</div>
 	<div id="menu">
 			<img src="img/icon.svg" id="menu-a">
-			<p id="menu-t">/ Menu /</p>
+			<p class="menu-t">/ Menu /</p>
 			<div class="menu-a">
 				<p style="margin:0;">作ったもの</p>
 				<p style="margin:0;">Youtube</p>
@@ -178,7 +178,7 @@
 				<p style="margin:0;">お問い合わせ</p>
 				<p style="margin:0;">RSS</p>
 			</div>
-			<p id="menu-t" style="margin:0;">/ Menu /</p>
+			<p class="menu-t" style="margin:0;">/ Menu /</p>
 		</div>
 	<div id="all">
 		<img src="img/icon.svg" id="menu-b">
@@ -252,7 +252,7 @@
 				$('#right-s').css('width','1vw');
 				$('#menu-a').css('width','5vh');
 				$('#menu-b').css('width','5vh');
-				$('#menu-t').css('font-size','3vh');
+				$('.menu-t').css('font-size','3vh');
 				$('.menu-a').css('font-size','2.2vh');
 				$('.url').hide();
 				$('.url-p').show();
@@ -261,7 +261,7 @@
 				$('#right-s').css('width','0.38vw');
 				$('#menu-a').css('width','2.7vw');
 				$('#menu-b').css('width','2.7vw');
-				$('#menu-t').css('font-size','2.8vw');
+				$('.menu-t').css('font-size','2.8vw');
 				$('.menu-a').css('font-size','2vw');
 				$('.url').show();
 				$('.url-p').hide();
