--- a/index.html
+++ b/index.html
@@ -151,7 +151,11 @@
 			margin-bottom: 0;
 			font-size: 2vw;
 			text-align: center;
-			font-family: 'DotGothic16', sans-serif;
+			font-family: 'DotGothic16', sans-serif; 
+		}
+		a {
+			text-decoration: none;
+			color: black;
 		}
 	</style>
 </head>
@@ -170,13 +174,13 @@
 			<img src="img/icon.svg" id="menu-a">
 			<p class="menu-t">/ Menu /</p>
 			<div class="menu-a">
-				<p style="margin:0;">作ったもの</p>
-				<p style="margin:0;">Youtube</p>
-				<p style="margin:0;">Github</p>
-				<p style="margin:0;">Instagram</p>
-				<p style="margin:0;">About</p>
-				<p style="margin:0;">お問い合わせ</p>
-				<p style="margin:0;">RSS</p>
+				<p style="margin:0;"><a>作ったもの</a></p>
+				<p style="margin:0;"><a href="https://www.youtube.com/channel/UCBjhnOwpoG7wzR5dQDj02iA">Youtube</a></p>
+				<p style="margin:0;"><a href="https://github.com/onudon/">Github</a></p>
+				<p style="margin:0;"><a>Instagram</a></p>
+				<p style="margin:0;"><a>About</a></p>
+				<p style="margin:0;"><a>お問い合わせ</a></p>
+				<p style="margin:0;"><a>RSS</a></p>
 			</div>
 		</div>
 	<div id="all">
@@ -190,12 +194,12 @@
 			<div class="url">
 				<a href="https://www.youtube.com/channel/UCBjhnOwpoG7wzR5dQDj02iA">Youtube</a>
 				<a>Instagram</a>
-				<a>Github</a>
+				<a href="https://github.com/onudon/">Github</a>
 			</div>
 			<div class="url-p">
 				<a href="https://www.youtube.com/channel/UCBjhnOwpoG7wzR5dQDj02iA">Youtube</a>
 				<a>Instagram</a>
-				<a>Github</a>
+				<a href="https://github.com/onudon/">Github</a>
 			</div>
 		</div>
 	</div>
