--- a/index.html
+++ b/index.html
@@ -174,13 +174,13 @@
 			<img src="img/icon.svg" id="menu-a">
 			<p class="menu-t">/ Menu /</p>
 			<div class="menu-a">
-				<p style="margin:0;"><a>作ったもの</a></p>
+				<p style="margin:0;"><a href="/works">作ったもの</a></p>
 				<p style="margin:0;"><a href="https://www.youtube.com/channel/UCBjhnOwpoG7wzR5dQDj02iA">Youtube</a></p>
 				<p style="margin:0;"><a href="https://github.com/onudon/">Github</a></p>
-				<p style="margin:0;"><a>Instagram</a></p>
-				<p style="margin:0;"><a>About</a></p>
-				<p style="margin:0;"><a>お問い合わせ</a></p>
-				<p style="margin:0;"><a>RSS</a></p>
+				<p style="margin:0;"><a href="/instagram">Instagram</a></p>
+				<p style="margin:0;"><a href="/about">About</a></p>
+				<p style="margin:0;"><a href="/contact">お問い合わせ</a></p>
+				<p style="margin:0;"><a href="/rss">RSS</a></p>
 			</div>
 		</div>
 	<div id="all">
