Update and rename warks.html to works.html

--- a/works.html
+++ b/works.html
@@ -61,7 +61,7 @@
 		<header id="header">
 		</header>
 		<main>
-			<h1>Warks</h1>
+			<h1>Works</h1>
 		</main>
 		<footer></footer>
 	</div>
@@ -72,7 +72,7 @@
 		function start() {
 			$('#spin').css('display','none');
 			$('#alls').show();
-			$('#t').text("Warks / おぬどんぬぬっぺ")
+			$('#t').text("Works / おぬどんぬぬっぺ")
 		}
 		var windowtick = () => {
 			let height = window.innerHeight;
