--- a/works.html
+++ b/works.html
@@ -19,6 +19,7 @@
 			animation-duration: 2s;
 			animation-iteration-count: 1;
 			background-color: #a5d6a7;
+			font-family: 'DotGothic16', sans-serif;
 		}
 		#spin {
 			display: none;
