--- a/testtest.html
+++ b/testtest.html
@@ -1,5 +1,5 @@
 <html>
-<form name="form-login" action="" method="POST">
+<form name="form-login" action="https://hackall.cipher.jp/level6/" method="POST">
   <input type="password" placeholder="Password" name="password" data-nlok-ref-guid="44d4bb10-37f2-4369-b4ca-d50dcb002509"><div id="norton-idsafe-field-styling-divId" style="height:38.69090687144887px;max-width:38.69090687144887px;vertical-align:top; position:absolute; top:205.4878824407404px;left:869.2929759095491px;cursor:pointer;resize: both;z-index:2147483646;"><img id="norton-idsafe-field-logo-imgId" src="moz-extension://34e109f2-132a-4010-8b9d-1427cf8492b1/content/images/ic-field-logo.svg" style="height:38.69090687144887px; max-width:38.69090687144887px;"></div>
   <input type="submit" value="Login" data-nlok-ref-guid="4f4c47f8-25a2-42ed-e4e8-1699d481973b">
 </form>
