--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 	<div id="block" class="title"></div>
 	<div id="alls">
 		<div id="title" class="title">おぬどんぬぬっぺ</div>
-		<label id="bottom" for="check_input">&#92;/</label>
+		<label id="bottom">&#92;/</label>
 		<div id="check"></div>
 		<div id="check-top"></div>
 		<div id="opacity"></div>
